--- a/information.html
+++ b/information.html
@@ -6,6 +6,7 @@
     <title>Weather Information</title>
     <link rel="stylesheet" href="information.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./logo.jpeg">
 </head>
 <body>
     <video autoplay muted loop id="background_video">
