--- a/Pages/information.html
+++ b/Pages/information.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Information</title>
-    <link rel="stylesheet" href="information.css">
+    <link rel="stylesheet" href="../CSS/information.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="./logo.jpeg">
+    <link rel="icon" type="image/x-icon" href="../Assets/logo.jpeg">
 </head>
 <body>
     <video autoplay muted loop id="background_video">
-        <source src="./background.mp4" type="video/mp4">
+        <source src="../Assets/background.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
     <div class="header">
-        <img src="./logo.jpeg">
+        <img src="../Assets/logo.jpeg">
         <h1 class="first">Weather </h1>
         <h1 class="second">Information</h1>
     </div>
@@ -34,6 +34,6 @@
         </div>
         <p class="message">Clear sky: The sun called, it’s working overtime today!</p>
     </div>
-    <script src="main.js"></script>
+    <script src="../JS/main.js"></script>
 </body>
 </html>
