--- a/Pages/loading.html
+++ b/Pages/loading.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loadinggg....</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="./logo.jpeg">
+    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="icon" type="image/x-icon" href="../Assets/logo.jpeg">
 </head>
 <body>
     <video autoplay muted id="loading-video">
-        <source src="./loading.mp4" type="video/mp4">
+        <source src="../Assets/loading.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-    <script src="loading.js"></script>
+    <script src="../JS/loading.js"></script>
 </body>
 </html>
