--- a/index.html
+++ b/index.html
@@ -3,33 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./CSS/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="icon" type="image/x-icon" href="./logo.jpeg">
+    <link rel="icon" type="image/x-icon" href="./Assets/logo.jpeg">
     <title>SkyCast</title>
 </head>
 <body>
     <video autoplay muted loop id="background-video">
-        <source src="./background.mp4" type="video/mp4">
+        <source src="./Assets/background.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
     <div class="header">
-        <img src="./logo.jpeg">
+        <img src="./Assets/logo.jpeg">
         <h1 class="first">Sky</h1>
         <h1 class="second">Cast</h1>
     </div>
     <div class="main">
         <div class="inmain" >
-        <img id="location-img" src="./location.jpg">
+        <img id="location-img" src="./Assets/location.jpg">
         <input type="text" id="city-input" placeholder="Enter city name">
-        <img id="search-img" src="./search.png">
+        <img id="search-img" src="./Assets/search.png">
         </div>
         <button id="search-button" onclick="handleClick()">Let's Go <span class="material-symbols-outlined">flight_takeoff</span></button>
     </div>
-    <script src="./script.js"></script>
+    <script src="./JS/script.js"></script>
 </body>
 </html>
